# air-quality-prediction

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.render  Makefile  README.md  air-quality-prediction.ipynb  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: cd.yml  ci.yml
app/: streamlit_app.py
docs/: api_spec.md  deployment_render.md
docs/fr/: 00-vue-ensemble.md  01-installation.md  02-demarrage-services.md  03-competences-c9-c13.md  04-architecture.md  05-glossaire-outils.md  PRESENTATION.pptx  RAPPORT_E3.docx  README.md
reports/: metrics.json
scripts/: generate_report.py  generate_slides.py  run.py
src/air_quality/: __init__.py  aqi.py  cli.py  config.py  data.py  evaluate.py  features.py  inference.py  logging_config.py  modeling.py  monitoring.py  validation.py
src/air_quality/api/: __init__.py  main.py  schemas.py  security.py
tests/: conftest.py  test_api.py  test_aqi.py  test_data.py  test_features.py  test_modeling.py  test_validation.py
